--- a/src/ListenTogether.Pages/Pages/SearchResultPage.razor
+++ b/src/ListenTogether.Pages/Pages/SearchResultPage.razor
@@ -16,7 +16,7 @@
 }
 else
 {
-    <MudButton Variant="Variant.Filled"
+    <MudButton Variant="Variant.Outlined"
            StartIcon="@Icons.Material.Filled.PlayCircleOutline"
            IconColor="Color.Primary"
            Size="Size.Small"
