--- a/src/ListenTogether.Pages/Pages/MyFavoriteDetailPage.razor.css
+++ b/src/ListenTogether.Pages/Pages/MyFavoriteDetailPage.razor.css
@@ -32,3 +32,13 @@
             width: 50px;
         }
 }
+
+.seq {
+    font-size: 14px;
+    opacity: 0.5;
+}
+
+.music-detail {
+    font-size: 13px;
+    opacity: 0.7;
+}
