--- a/src/ListenTogether.Pages/Pages/SettingsPage.razor.css
+++ b/src/ListenTogether.Pages/Pages/SettingsPage.razor.css
@@ -1,8 +1,14 @@
 @media screen and (min-width: 960px) {
     .page {
-        width: 500px;
+        width: 400px;
+        margin: auto;
     }
 }
 
 @media screen and (max-width: 960px) {
+}
+
+.type-title {
+    font-size: 18px;
+    font-weight: bold;
 }
