--- a/src/ListenTogether.Pages/Pages/SearchPage.razor
+++ b/src/ListenTogether.Pages/Pages/SearchPage.razor
@@ -4,7 +4,7 @@
 @inject NavigationManager NavigationManager
 @inject IMusicNetworkService MusicNetworkService
 @inject ISearchHistoryStorage SearchHistoryStorage
-<div class="page">
+<div class="page pt-2 pb-2 pl-1 pr-1">
     <SearchBar OnSearch="@DoSearchAsync" />
 
     <div class="suggest mt-3">
