--- a/src/ListenTogether.Pages/Shared/MainLayout.razor
+++ b/src/ListenTogether.Pages/Shared/MainLayout.razor
@@ -55,13 +55,19 @@
                 Primary = "#C98FFF",
                 Secondary = Colors.Green.Accent4,
                 AppbarBackground = Colors.Red.Default,
+                TableStriped = "#F5F5F5",
+                TableHover = "#F1F6FD",
+                DarkLighten = "#CACDD1"
 
             },
             PaletteDark = new PaletteDark()
             {
                 Primary = "#C98FFF",
                 Background = "#333333",
-                Surface = "#333333"
+                Surface = "#333333",
+                TableStriped = "#292929",
+                TableHover = "#182437",
+                DarkLighten = "#494C50",
             }
         };
 
