--- a/src/ListenTogether.Pages/Pages/PlaylistPage.razor
+++ b/src/ListenTogether.Pages/Pages/PlaylistPage.razor
@@ -56,7 +56,7 @@ else
                 </div>
 
                 <MouseDiv Class="d-flex align-center flex-grow-1 ml-4 info" OnClick="@(()=>Play(playlistItem))">
-                    <MudInputLabel>@playlistItem.Name - @playlistItem.Artist</MudInputLabel>
+                    <div>@playlistItem.Name - @playlistItem.Artist</div>
                 </MouseDiv>
             </div>
         }
