--- a/src/ListenTogether.Pages/Components/Player/DesktopView.razor.css
+++ b/src/ListenTogether.Pages/Components/Player/DesktopView.razor.css
@@ -1,21 +1,25 @@
-.music-image {
-    cursor: pointer;
+.player-main {
+    height: 60px;
 }
 
-    .music-image:hover .mask {
-        display: block;
-    }
+.music-image {
+    height: 45px;
+}
+
+.image-hover:hover .mask {
+    display: block;
+}
 
 .mask {
     display: none;
     width: 45px;
     height: 45px;
-    margin-top: -45px;
+    margin-top: -51px;
     opacity: 0.7;
     cursor: pointer;
     vertical-align: middle;
     text-align: center;
-    background-color: #FFF;
+    background-color: var(--mud-palette-table-striped);
 }
 
 .music-detail {
